# ulphi

./: .dir-locals.el  .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  Doxyfile.in  NEWS  README.md  SConstruct  TODO
SCons/Tool/: inkscape.py
cmake/Modules/: AddCompilerFlag.cmake  CheckBoostBug9692.cmake  DoxygenTargets.cmake  FindPythonModule.cmake  UseLATEX.cmake
debian/: changelog  control  copyright  python3-ulphi.install  rules  ulphi-dev.install  ulphi-doc.doc-base
docs/: SConscript
docs/datasets/: E_I_transformer_core_time.csv  M330-35-A_B-Ampl-0.6.csv  M330-35-A_B-Ampl-1.6.csv  M330-35-A_H-Ampl-2800.csv  M400_50A-sqrt.csv  simple_iron_core.csv  wound_iron_core_freq.csv  wound_iron_core_time.csv
docs/images/: LICENSE.md
docs/include/: config.tex.in  fdl-1.3.tex  preamble-common.tex
docs/manual/: Discretization.tex  Examples.tex  General-Electromagnetic-Theory.tex  Important_Techniques_in_Electromagnetic_Modelling.tex  Introduction.tex  Linear-Poisson-Equation.tex  Notation.tex  Using-Ulphi.tex  fdl.tex  manual.tex
docs/poster/: CMakeLists.txt  poster.tex
docs/presentation/: CMakeLists.txt  frame02.tex  frame03.tex  frame04.tex  frame05.tex  frame06.tex  frame07.tex  frame08.tex  frame09.tex  frame10.tex  frame11.tex  frame12.tex  frame13.tex  frame14.tex  handout.tex  presentation.tex
documents/: CMakeLists.txt
documents/datasets/: CMakeLists.txt  E_I_transformer_core_freq.csv  M330-35-A.csv  M330-35-A_H-Ampl-160.csv  M330-35-A_current-input.csv  M330-35-A_voltage-input.csv  M330-35-A_xy.csv  M400_50A-arctan.csv  M400_50A-spline.csv  coaxial_line.csv
documents/images/: CMakeLists.txt  Poisson-grid-3D.sk
documents/include/: CMakeLists.txt  fdl.tex  literature.bib  preamble-common.tex
documents/manual/: CMakeLists.txt  Discretization.tex  Examples.tex  General-Electromagnetic-Theory.tex  Important_Techniques_in_Electromagnetic_Modelling.tex  Introduction.tex  Linear-Poisson-Equation.tex  Practical-Aspects.tex  manual.tex
documents/poster/: poster.tex
documents/presentation/: frame01.tex  frame03.tex  frame05.tex  frame06.tex  frame07.tex  frame08.tex  frame09.tex  frame10.tex  frame11.tex  frame12.tex  frame13.tex  frame14.tex  frame15.tex  frames.tex  presentation.tex
documents/white-paper/: CMakeLists.txt  white-paper.md
example/: CMakeLists.txt  E_I_transformer_core.py  simple_iron_core.py  wound_iron_core.py
examples/: coaxial_line.py  toroidal_wound_core.py
extras/python/: CMakeLists.txt  materials.py  vertex_distributions.cpp
extras/python/geometry/: CMakeLists.txt  __init__.py  cartesian.py
profile/: CMakeLists.txt  E-I-transformer-core.cpp
python/: __init__.py  _quantity.py  boost_python_extra.hpp  materials.cpp  quantity_type_conversion.hpp  tuple_type_conversion.hpp  type_conversions.cpp
python/analysis/: CMakeLists.txt  __init__.py  analysis.cpp  magnetoharmonic.py  magnetostatic.py
python/boost/parameter/: python.hpp
python/geometry/: geometry.cpp  polar.py
src/: CMakeLists.txt  analysis.hpp  arctan_reluctivity.cpp  arctan_reluctivity.hpp  boost_iterator_extra.hpp  boost_units_extra.hpp  boundary-fwd.hpp  boundary.cpp  boundary.hpp  boundary_condition-fwd.hpp  boundary_condition.hpp  boundary_vertex_factory.hpp  cartesian_geometry.hpp  circle.cpp  circle.hpp  combined_reluctivity.cpp  combined_reluctivity.hpp  config.h.in  constant_reluctivity.cpp  constant_reluctivity.hpp  coordinate_systems.hpp  dirichlet_condition.cpp  dirichlet_condition.hpp  dirichlet_vertex.hpp  edge_maker.hpp  edge_properties.cpp  edge_properties.hpp  eigen_extra.cpp  eigen_extra.hpp  exception.hpp  exp_vertex_distribution.cpp  exp_vertex_distribution.hpp  grid.hpp  grid_assembly.cpp  grid_assembly.hpp  grid_compiler.cpp  grid_compiler.hpp  grid_graph-fwd.hpp  grid_graph.cpp  grid_graph.hpp  (+44 more)
test/: checker.cpp  checker_python.cpp  linear_function.hpp  linspace.hpp  pstream.hpp
tests/: CMakeLists.txt  cubic_test_function.hpp  gnuplot.hpp
tools/: reluctivity-models.py
